--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,65 +1,24 @@
-html,body{
-min-height: 100%;
-}
-body {
-    background-color: rgb(218, 124, 124);
-    color: #fff;
-    font-family: 'Sintony', Helvetica, Arial, sans-serif;
-    font-size: 16px;
-}
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Acme', Helvetica, Arial, sans-serif;
-    font-weight: 700;
-}
-
-.avatar{
-    position: relative;
-    display: inline-block;
-    margin-top: 10vh;
-    margin-bottom: 5vh;
+.sidenav {
+  height: 100%;
+  width: 220px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  padding-top: 20px;
 }
 .avatar img{
+    width:150px;
+    height: 150px;
     border-radius: 50%;
-    max-height: 60vh;
-    height: auto;
-    max-width: 100%;
 }
-@-webkit-keyframes pulse {
-    0% {
-        opacity:1;
-    }
-    100% {
-        opacity:0;
-        -webkit-transform:scale(1.3)
-    }
+.sidenav h3{
+    color: #fff;
+    font-weight: 700;
 }
-@-moz-keyframes pulse {
-    0% {
-        opacity:1;
-    }
-    100% {
-        opacity:0;
-        -moz-transform:scale(1.3)
-    }
-}
-.pulse{
-    -webkit-animation-duration: 2s;
-    -webkit-animation-iteration-count: infinite;
-    -webkit-animation-name: pulse;
-    -moz-animation-duration: 2s;
-    -moz-animation-iteration-count: infinite;
-    -moz-animation-name: pulse;
-    border: 15px solid #30BDFF;
-    border-radius: 50%;
-    left: -15px;
-    overflow: hidden;
-    position: absolute;
-    top: -15px;
-    width: calc(100% + 30px);
-    height: calc(100% + 30px);
-}
-
 .social-list {
     list-style: none;
     display: inline-block;
@@ -88,16 +47,3 @@ h1, h2, h3, h4, h5, h6 {
     color: #1da1f2;
 }
 
-.circles{
-    display: block;
-    background-color: #fff;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    position: absolute;
-    opacity: 0.5;
-    z-index: -1;
-    -webkit-box-shadow: 0px 0px 10px 5px rgba(255,255,255,0.52);
-    -moz-box-shadow: 0px 0px 10px 5px rgba(255,255,255,0.52);
-    box-shadow: 0px 0px 10px 5px rgba(255,255,255,0.52);
-}
