--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,6 +1,6 @@
 
 .main{
-    margin-left: 220px;
+    margin-left: 230px;
     padding: 0px 10px;
 }
 h1{
@@ -11,7 +11,7 @@ h1{
  }
 .sidenav {
   height: 100%;
-  width: 220px;
+  width: 230px;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -29,6 +29,10 @@ h1{
 .sidenav h3{
     color: #fff;
     font-weight: 700;
+}
+.sidenav .content{
+    padding: 5px;
+    color: #fff;
 }
 .social-list {
     list-style: none;
