--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -9,6 +9,10 @@ h1{
     text-align: center;
     margin-bottom: 20px;
  }
+ h3{
+    font-weight: 700;
+    font-size: 25px;
+ }
 .sidenav {
   height: 100%;
   width: 230px;
