--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -10,8 +10,9 @@ h1{
     margin-bottom: 20px;
  }
  h3{
+    padding: 20px 0px;
     font-weight: 700;
-    font-size: 25px;
+    font-size: 30px;
  }
 .sidenav {
   height: 100%;
@@ -31,6 +32,7 @@ h1{
     border-radius: 50%;
 }
 .sidenav h3{
+   
     color: #fff;
     font-weight: 700;
 }
