--- a/demo/codonistPSD/assets/css/main.css
+++ b/demo/codonistPSD/assets/css/main.css
@@ -599,9 +599,11 @@ color:#535353;
     }
     .top__header {
         padding: 0px 0px;
+        justify-content: space-between;
     }
     .top__header span {
-      font-size:8px;
+        font-size: 14px;
+        padding:0px 6px;
     }
     div#navbarSupportedContent {
         position: fixed;
@@ -753,8 +755,18 @@ color:#535353;
         margin-bottom: 24px;
         margin-top: 30px;
     }
+    .instagram__post {
+        height: auto;
+    }
+    .instagram__post img {
+        height: auto;
+        width: 100%;
+    }
+    .vedio__tumbnail {
+        height: auto;
+    }
     .specefication__tabs h1 {
-        font-size: 26px;
+        font-size: 20px;
         padding: 35px 0px;
     }
     .specefication__title h1 {
@@ -775,21 +787,52 @@ color:#535353;
     }
     
 }
+@media (max-width: 1070px) { 
 
+    .navbar-collapse .navbar-nav .nav-item {
+        margin-right: 32px;
+    }
+    .navbar-collapse .navbar-nav .nav-item {
+        margin-right: 32px;
+    }
+    .nav {
+        border-bottom: none !important;
+        width: 100%;
+        justify-content: space-between;
+    }
+    .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link {
+        margin-right: 16px;
+    }
+    .accordion__body__text p {
+        font-size: 19px;
+    }
+    .accordion__body__text .nav-item {
+        margin-bottom: 17px;
+    }
+    .bg {
+        padding-bottom: 36px;
+        margin-bottom: 30px;
+    }  
+    .bg:before{
+        height:100%;
+    }
+    .car__description p {
+        font-size: 16px;
+    
+    }
+    .owl-dots {
+        top: -93px;
+        position: absolute;
+        left: 38%;
+    }
+    .owl-carousel .owl-nav button.owl-next, .owl-carousel .owl-nav button.owl-prev, .owl-carousel button.owl-dot {
+        width: 20px;
+        height: 20px;
+        margin-left: 18px;
+    }
+    .car__description {
+        margin-top: 0px;
+        color: white;
+    }
 
-.splide__slide img {
-    width: 100%;
-    height: auto;
-}
-.splide__slide img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-.splide__slide {
-    opacity: 0.6;
-}
-
-.splide__slide.is-active {
-    opacity: 1;
 }
