--- a/demo/red/css/style.css
+++ b/demo/red/css/style.css
@@ -452,6 +452,8 @@ label.error{
 
 .row-columns{
   margin-top: -4em;
+  width: 100%;
+    flex-wrap: wrap;
 }
 
 .column{
@@ -918,9 +920,10 @@ label.error{
   color: #fff;
 }
 
-.showcase-item-thumbnail img{
+.showcase-item-thumbnail img {
   display: block;
   width: 100%;
+  height: 250px;
 }
 
 .showcase-item-hover{
@@ -1281,6 +1284,30 @@ body:not(.modal-open){
   }
 
 }
-
-
-
+img.brand-img-white {
+  max-width: 200px;
+}
+img.img-circle {
+  width: 100px;
+}
+.rel-1 h1{
+  font-size: 3.9em;
+}
+.our-skills .skills-bar img{
+  width: 65px;
+}
+.our-skills .section-skills-bar{
+  display: flex;
+  margin-bottom: 30px;
+}
+.our-skills .progress{
+  margin: 10px 0 0 0;
+  width: 85%;
+}
+.progress-bar-text {
+  width: 100%;
+  margin-left: 15px;
+}
+.our-skills .progress-bar-title {
+  margin-bottom: 0;
+}
